Comments, Notes, Feeds, Event Templates, Event Federation, Calendar export and more
* Add public calendar, public station view, event category management, and quick field templates

- Public calendar: events/categories/fields can be marked public, iCal feed via ical4j, public event API
- Public station view: unified sidebar layout at /public/station/:uid with calendar + knowledge base tabs
- Discovery: shows all stations with public content, own station badge, public station links
- Event category management: dedicated view with reorder, max shown events, public toggle
- Quick field templates: Ort/Treffpunkt/Thema quick-add buttons in field editor
- Station settings: publicCalendarEnabled toggle
- DB: patch_5 adds public columns to station, event_category, station_event, event_field
- Demo: first station marked public with public categories
- Tests: fixed for new entity signatures

* Add fire theme and update landing page

* Reorganize templates and theming. Add color blind themes

* Update helpcenter

* Implement EventBus

* Domain event system, notification overhaul, feeds, event templates, and infra cleanup

## Domain Event System
- DomainEvent, DomainEventHandler, DomainEventBus infrastructure with Guice multibinding
- 17 event handlers registered for all notification-producing operations
- All routes fully decoupled from NotificationService (Events, News, Exchange, Forms, Procurement, MemberGroups, Lending)
- Services now publish domain events; handlers create notifications
- DemoService migrated to use services for event-producing operations

## User Feeds (iCal, RSS, Atom)
- Feed token system: user_feed_token table, FeedTokenService, FeedTokenRoutes
- User-bound iCal feed at /public/feed/{token}/events.ics
  - Filters out declined events and events with expired registration deadlines
  - 1-hour cache
- RSS 2.0 and Atom 1.0 notification feeds using ROME library
  - Per-type feed_enabled preference (new column on user_notification_settings)
  - NotificationTogg