@@ -14,23 +14,36 @@ import dev.chojo.ember.auth.PasswordHasher;
 import dev.chojo.ember.conf.file.elements.Database;
 import dev.chojo.ember.conf.file.elements.Demo;
 import dev.chojo.ember.feature.account.repository.AccountRepository;
+import dev.chojo.ember.feature.attendance.entity.AttendanceFieldConfig;
+import dev.chojo.ember.feature.attendance.entity.AttendanceFieldType;
 import dev.chojo.ember.feature.attendance.repository.AttendanceRepository;
+import dev.chojo.ember.feature.events.entity.EventFieldConfig;
+import dev.chojo.ember.feature.events.entity.EventFieldType;
 import dev.chojo.ember.feature.events.entity.EventRegistration;
+import dev.chojo.ember.feature.events.entity.EventTemplateFieldData;
 import dev.chojo.ember.feature.events.entity.StationEvent;
 import dev.chojo.ember.feature.events.repository.EventFieldRepository;
 import dev.chojo.ember.feature.events.repository.EventRepository;
+import dev.chojo.ember.feature.events.service.EventService;
+import dev.chojo.ember.feature.events.service.EventTemplateService;
+import dev.chojo.ember.feature.feed.service.FeedTokenService;
 import dev.chojo.ember.feature.inventory.entity.ExchangeStatus;
 import dev.chojo.ember.feature.inventory.repository.ExchangeRepository;
 import dev.chojo.ember.feature.inventory.repository.InventoryRepository;
-import dev.chojo.ember.feature.inventory.repository.ProcurementRepository;
+import dev.chojo.ember.feature.inventory.service.ExchangeService;
+import dev.chojo.ember.feature.inventory.service.ProcurementService;
+import dev.chojo.ember.feature.knowledgebase.entity.PublicKbMode;
+import dev.chojo.ember.feature.members.entity.ProfileFieldConfig;
 import dev.chojo.ember.feature.members.entity.ProfileFieldScope;
+import dev.chojo.ember.feature.members.entity.ProfileFieldType;
 import dev.chojo.ember.feature.members.entity.StationMember;
 import dev.chojo.ember.feature.members.repository.MemberGroupRepository;
 import dev.chojo.ember.feature.members.repository.ProfileFieldChangeRepository;
 import dev.chojo.ember.feature.members.repository.ProfileFieldRepository;
 import dev.chojo.ember.feature.members.repository.StationMemberRepository;
 import dev.chojo.ember.feature.members.repository.UserTagRepository;
-import dev.chojo.ember.feature.news.repository.NewsRepository;
+import dev.chojo.ember.feature.news.service.NewsService;
+import dev.chojo.ember.feature.station.entity.DiscoveryVisibility;
 import dev.chojo.ember.feature.station.repository.StationRepository;
 import dev.chojo.ember.feature.system.repository.ApplicationSettingRepository;
 import jakarta.inject.Inject;
@@ -74,9 +87,7 @@ public class DemoService {
     private final AttendanceRepository attendanceRepository;
     private final InventoryRepository inventoryRepository;
     private final ProfileFieldRepository profileFieldRepository;
-    private final NewsRepository newsRepository;
     private final ExchangeRepository exchangeRepository;
-    private final ProcurementRepository procurementRepository;
     private final UserTagRepository userTagRepository;
     private final ProfileFieldChangeRepository profileFieldChangeRepository;
     private final EventFieldRepository eventFieldRepository;
@@ -94,6 +105,12 @@ public class DemoService {
     private final DemoFederationSeeder federationSeeder;
     private final DemoLendingSeeder lendingSeeder;
     private final ApplicationSettingRepository applicationSettingRepository;
+    private final EventService eventService;
+    private final NewsService newsService;
+    private final ExchangeService exchangeService;
+    private final ProcurementService procurementService;
+    private final EventTemplateService eventTemplateService;
+    private final FeedTokenService feedTokenService;
     private final ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
     private volatile Instant lastActivity = Instant.now();
     private volatile boolean needsReset = false;
@@ -111,9 +128,7 @@ public class DemoService {
             AttendanceRepository attendanceRepository,
             InventoryRepository inventoryRepository,
             ProfileFieldRepository profileFieldRepository,
-            NewsRepository newsRepository,
             ExchangeRepository exchangeRepository,
-            ProcurementRepository procurementRepository,
             UserTagRepository userTagRepository,
             ProfileFieldChangeRepository profileFieldChangeRepository,
             EventFieldRepository eventFieldRepository,
@@ -129,7 +144,13 @@ public class DemoService {
             DemoProtocolSeeder protocolSeeder,
             DemoFederationSeeder federationSeeder,
             DemoLendingSeeder lendingSeeder,
-            ApplicationSettingRepository applicationSettingRepository) {
+            ApplicationSettingRepository applicationSettingRepository,
+            EventService eventService,
+            NewsService newsService,
+            ExchangeService exchangeService,
+            ProcurementService procurementService,
+            EventTemplateService eventTemplateService,
+            FeedTokenService feedTokenService) {
         this.demoConfig = demoConfig;
         this.databaseConfig = databaseConfig;
         this.dataSource = dataSource;
@@ -141,9 +162,7 @@ public class DemoService {
         this.attendanceRepository = attendanceRepository;
         this.inventoryRepository = inventoryRepository;
         this.profileFieldRepository = profileFieldRepository;
-        this.newsRepository = newsRepository;
         this.exchangeRepository = exchangeRepository;
-        this.procurementRepository = procurementRepository;
         this.userTagRepository = userTagRepository;
         this.profileFieldChangeRepository = profileFieldChangeRepository;
         this.eventFieldRepository = eventFieldRepository;
@@ -160,6 +179,12 @@ public class DemoService {
         this.federationSeeder = federationSeeder;
         this.lendingSeeder = lendingSeeder;
         this.applicationSettingRepository = applicationSettingRepository;
+        this.eventService = eventService;
+        this.newsService = newsService;
+        this.exchangeService = exchangeService;
+        this.procurementService = procurementService;
+        this.eventTemplateService = eventTemplateService;
+        this.feedTokenService = feedTokenService;
     }
 
     public boolean isEnabled() {
@@ -233,9 +258,17 @@ public class DemoService {
         accountRepository.addAccountRole(admin.id(), "ADMIN");
 
         // -- Station --
-        var station = stationRepository.create("Jugendfeuerwehr Musterstadt");
+        var station = stationRepository.create(
+                "Jugendfeuerwehr Musterstadt", UUID.fromString("00000000-0000-4000-a000-000000000001"));
         stationRepository.updateTimezone(station.id(), "Europe/Berlin");
         stationRepository.updateLocale(station.id(), "de-DE");
+        stationRepository.updatePublicCalendarEnabled(station.id(), true);
+        stationRepository.updatePublicKbMode(station.id(), PublicKbMode.ALLOW_ALL);
+        stationRepository.updateDiscoverySettings(
+                station.id(),
+                DiscoveryVisibility.PUBLIC,
+                "Jugendfeuerwehr Musterstadt — Übungen, Wettbewerbe und mehr",
+                true);
         try {
             var logoBytes = Files.readAllBytes(Path.of("templates", "graphics", "logo.png"));
             stationRepository.updateLogo(station.id(), logoBytes, "image/png");
@@ -268,30 +301,55 @@ public class DemoService {
         var groupFortgeschritten = memberGroupRepository.create(station.id(), "Fortgeschritten");
 
         // -- Profile fields: TEAM scope (Betreuer) --
-        var fieldJuleica =
-                profileFieldRepository.create(station.id(), "Juleica", "boolean", "{}", 0, ProfileFieldScope.TEAM);
+        var fieldJuleica = profileFieldRepository.create(
+                station.id(),
+                "Juleica",
+                ProfileFieldType.BOOLEAN,
+                ProfileFieldConfig.parse("{}"),
+                0,
+                ProfileFieldScope.TEAM);
         var fieldJuleicaAblauf = profileFieldRepository.create(
-                station.id(), "Juleica Ablaufdatum", "date", "{}", 1, ProfileFieldScope.TEAM);
-        var fieldFuehrerschein =
-                profileFieldRepository.create(station.id(), "Führerschein", "boolean", "{}", 2, ProfileFieldScope.TEAM);
+                station.id(),
+                "Juleica Ablaufdatum",
+                ProfileFieldType.DATE,
+                ProfileFieldConfig.parse("{}"),
+                1,
+                ProfileFieldScope.TEAM);
+        var fieldFuehrerschein = profileFieldRepository.create(
+                station.id(),
+                "Führerschein",
+                ProfileFieldType.BOOLEAN,
+                ProfileFieldConfig.parse("{}"),
+                2,
+                ProfileFieldScope.TEAM);
         var fieldFuehrerscheinAblauf = profileFieldRepository.create(
-                station.id(), "Führerschein Ablaufdatum", "date", "{}", 3, ProfileFieldScope.TEAM);
+                station.id(),
+                "Führerschein Ablaufdatum",
+                ProfileFieldType.DATE,
+                ProfileFieldConfig.parse("{}"),
+                3,
+                ProfileFieldScope.TEAM);
 
         // -- Profile fields: GUARDIAN scope (Eltern) --
         var fieldTelefon = profileFieldRepository.create(
                 station.id(),
                 "Mobilnummer",
-                "text",
-                "{\"overview\":true,\"required\":true}",
+                ProfileFieldType.TEXT,
+                ProfileFieldConfig.parse("{\"overview\":true,\"required\":true}"),
                 0,
                 ProfileFieldScope.GUARDIAN);
-        var fieldFestnetz =
-                profileFieldRepository.create(station.id(), "Festnetz", "text", "{}", 1, ProfileFieldScope.GUARDIAN);
+        var fieldFestnetz = profileFieldRepository.create(
+                station.id(),
+                "Festnetz",
+                ProfileFieldType.TEXT,
+                ProfileFieldConfig.parse("{}"),
+                1,
+                ProfileFieldScope.GUARDIAN);
         var fieldNewsletter = profileFieldRepository.create(
                 station.id(),
                 "Newsletter per Mail",
-                "boolean",
-                "{\"defaultValue\":true}",
+                ProfileFieldType.BOOLEAN,
+                ProfileFieldConfig.parse("{\"defaultValue\":true}"),
                 2,
                 ProfileFieldScope.GUARDIAN);
 
@@ -299,47 +357,88 @@ public class DemoService {
         var fieldPersonalnummer = profileFieldRepository.create(
                 station.id(),
                 "Personalnummer",
-                "text",
-                "{\"readonly\":true,\"overview\":true}",
+                ProfileFieldType.TEXT,
+                ProfileFieldConfig.parse("{\"readonly\":true,\"overview\":true}"),
                 0,
                 ProfileFieldScope.MEMBER);
         var fieldGeschlecht = profileFieldRepository.create(
                 station.id(),
                 "Geschlecht",
-                "select",
-                "{\"readonly\":true,\"overview\":true,\"options\":[\"männlich\",\"weiblich\",\"divers\"]}",
+                ProfileFieldType.ENUM,
+                ProfileFieldConfig.parse(
+                        "{\"readonly\":true,\"overview\":true,\"options\":[\"männlich\",\"weiblich\",\"divers\"]}"),
                 1,
                 ProfileFieldScope.MEMBER);
         var fieldGeburtstag = profileFieldRepository.create(
                 station.id(),
                 "Geburtstag",
-                "date",
-                "{\"required\":true,\"overview\":true}",
+                ProfileFieldType.DATE,
+                ProfileFieldConfig.parse("{\"required\":true,\"overview\":true}"),
                 2,
                 ProfileFieldScope.MEMBER);
         var fieldAllergien = profileFieldRepository.create(
                 station.id(),
                 "Allergien",
-                "text",
-                "{\"overview\":true,\"notifyOnChange\":true}",
+                ProfileFieldType.TEXT,
+                ProfileFieldConfig.parse("{\"overview\":true,\"notifyOnChange\":true}"),
                 3,
                 ProfileFieldScope.MEMBER);
         var fieldLeistungsspange = profileFieldRepository.create(
-                station.id(), "Leistungsspange", "boolean", "{\"readonly\":true}", 4, ProfileFieldScope.MEMBER);
+                station.id(),
+                "Leistungsspange",
+                ProfileFieldType.BOOLEAN,
+                ProfileFieldConfig.parse("{\"readonly\":true}"),
+                4,
+                ProfileFieldScope.MEMBER);
         var fieldLeistungsspangeDatum = profileFieldRepository.create(
-                station.id(), "Leistungsspange Datum", "date", "{\"readonly\":true}", 5, ProfileFieldScope.MEMBER);
+                station.id(),
+                "Leistungsspange Datum",
+                ProfileFieldType.DATE,
+                ProfileFieldConfig.parse("{\"readonly\":true}"),
+                5,
+                ProfileFieldScope.MEMBER);
         var fieldJF1 = profileFieldRepository.create(
-                station.id(), "Jugendflamme 1", "boolean", "{\"readonly\":true}", 6, ProfileFieldScope.MEMBER);
+                station.id(),
+                "Jugendflamme 1",
+                ProfileFieldType.BOOLEAN,
+                ProfileFieldConfig.parse("{\"readonly\":true}"),
+                6,
+                ProfileFieldScope.MEMBER);
         var fieldJF1Datum = profileFieldRepository.create(
-                station.id(), "Jugendflamme 1 Datum", "date", "{\"readonly\":true}", 7, ProfileFieldScope.MEMBER);
+                station.id(),
+                "Jugendflamme 1 Datum",
+                ProfileFieldType.DATE,
+                ProfileFieldConfig.parse("{\"readonly\":true}"),
+                7,
+                ProfileFieldScope.MEMBER);
         var fieldJF2 = profileFieldRepository.create(
-                station.id(), "Jugendflamme 2", "boolean", "{\"readonly\":true}", 8, ProfileFieldScope.MEMBER);
+                station.id(),
+                "Jugendflamme 2",
+                ProfileFieldType.BOOLEAN,
+                ProfileFieldConfig.parse("{\"readonly\":true}"),
+                8,
+                ProfileFieldScope.MEMBER);
         var fieldJF2Datum = profileFieldRepository.create(
-                station.id(), "Jugendflamme 2 Datum", "date", "{\"readonly\":true}", 9, ProfileFieldScope.MEMBER);
+                station.id(),
+                "Jugendflamme 2 Datum",
+                ProfileFieldType.DATE,
+                ProfileFieldConfig.parse("{\"readonly\":true}"),
+                9,
+                ProfileFieldScope.MEMBER);
         var fieldJF3 = profileFieldRepository.create(
-                station.id(), "Jugendflamme 3", "boolean", "{\"readonly\":true}", 10, ProfileFieldScope.MEMBER);
+                station.id(),
+                "Jugendflamme 3",
+                ProfileFieldType.BOOLEAN,
+                ProfileFieldConfig.parse("{\"readonly\":true}"),
+                10,
+                ProfileFieldScope.MEMBER);
         var fieldJF3Datum = profileFieldRepository.create(
-                station.id(), "Jugendflamme 3 Datum", "date", "{\"readonly\":true}", 11, ProfileFieldScope.MEMBER);
+                station.id(),
+                "Jugendflamme 3 Datum",
+                ProfileFieldType.DATE,
+                ProfileFieldConfig.parse("{\"readonly\":true}"),
+                11,
+                ProfileFieldScope.MEMBER);
 
         // -- Users --
         // Betreuer (team role, in Betreuer group)
@@ -648,12 +747,17 @@ public class DemoService {
         attendanceRepository.setTemplateGroups(
                 templateAnfaenger.id(), List.of(new AttendanceRepository.TemplateGroup(groupAnfaenger.id(), 0)));
         attendanceRepository.createTemplateField(
-                templateAnfaenger.id(), "Thema", "string", "{\"defaultValue\":\"Grundausbildung\"}", 0);
+                templateAnfaenger.id(),
+                "Thema",
+                AttendanceFieldType.STRING,
+                AttendanceFieldConfig.parse("{\"defaultValue\":\"Grundausbildung\"}"),
+                0);
 
         var templateFort = attendanceRepository.createTemplate(station.id(), "Übung Fortgeschritten");
         attendanceRepository.setTemplateGroups(
                 templateFort.id(), List.of(new AttendanceRepository.TemplateGroup(groupFortgeschritten.id(), 0)));
-        attendanceRepository.createTemplateField(templateFort.id(), "Thema", "string", "{}", 0);
+        attendanceRepository.createTemplateField(
+                templateFort.id(), "Thema", AttendanceFieldType.STRING, AttendanceFieldConfig.parse("{}"), 0);
 
         var templateGesamt = attendanceRepository.createTemplate(station.id(), "Gesamtübung");
         attendanceRepository.setTemplateGroups(
@@ -666,6 +770,9 @@ public class DemoService {
         var catUebung = eventRepository.createCategory(station.id(), "Übungen", 0);
         var catVeranstaltung = eventRepository.createCategory(station.id(), "Veranstaltungen", 1);
         var catWettbewerb = eventRepository.createCategory(station.id(), "Wettbewerbe", 2);
+        // Make Veranstaltungen public (all events in this category visible on public calendar)
+        eventRepository.updateCategory(
+                catVeranstaltung.id(), catVeranstaltung.name(), catVeranstaltung.position(), null, true);
 
         // -- Events --
         Instant monStart = LocalDate.now().atTime(17, 30).toInstant(ZoneOffset.UTC);
@@ -675,7 +782,7 @@ public class DemoService {
         Instant satStart = LocalDate.now().atTime(10, 0).toInstant(ZoneOffset.UTC);
         Instant satEnd = LocalDate.now().atTime(13, 0).toInstant(ZoneOffset.UTC);
 
-        var evAnfaenger = eventRepository.create(
+        var evAnfaenger = eventService.create(
                 station.id(),
                 "Übung Anfänger",
                 "Grundausbildung für Anfänger",
@@ -687,8 +794,9 @@ public class DemoService {
                 false,
                 null,
                 false,
-                catUebung.id());
-        var evFort = eventRepository.create(
+                catUebung.id(),
+                null);
+        var evFort = eventService.create(
                 station.id(),
                 "Übung Fortgeschritten",
                 "Training für Fortgeschrittene",
@@ -700,8 +808,9 @@ public class DemoService {
                 false,
                 null,
                 false,
-                catUebung.id());
-        var evGesamt = eventRepository.create(
+                catUebung.id(),
+                null);
+        var evGesamt = eventService.create(
                 station.id(),
                 "Gesamtübung",
                 "Gemeinsame Übung aller Gruppen",
@@ -713,10 +822,11 @@ public class DemoService {
                 false,
                 null,
                 false,
-                catUebung.id());
+                catUebung.id(),
+                null);
 
         // Monthly: first Saturday = Elternabend
-        eventRepository.create(
+        eventService.create(
                 station.id(),
                 "Elternabend",
                 "Monatliches Treffen mit den Eltern",
@@ -728,10 +838,11 @@ public class DemoService {
                 false,
                 null,
                 false,
-                catVeranstaltung.id());
+                catVeranstaltung.id(),
+                null);
 
         // Quarterly: first Saturday = Dienstbesprechung
-        eventRepository.create(
+        eventService.create(
                 station.id(),
                 "Dienstbesprechung",
                 "Vierteljährliche Besprechung aller Betreuer",
@@ -743,7 +854,8 @@ public class DemoService {
                 false,
                 null,
                 false,
-                catVeranstaltung.id());
+                catVeranstaltung.id(),
+                null);
 
         // -- Past attendance sessions (full year + current year so far) --
         // Yearly: Jahreshauptversammlung on Sep 20
@@ -751,7 +863,7 @@ public class DemoService {
                 LocalDate.now().withMonth(9).withDayOfMonth(20).atTime(18, 0).toInstant(ZoneOffset.UTC);
         Instant jhvEnd =
                 LocalDate.now().withMonth(9).withDayOfMonth(20).atTime(21, 0).toInstant(ZoneOffset.UTC);
-        eventRepository.create(
+        eventService.create(
                 station.id(),
                 "Jahreshauptversammlung",
                 "Jährliche Versammlung mit Berichten und Wahlen",
@@ -763,7 +875,8 @@ public class DemoService {
                 true,
                 null,
                 false,
-                catVeranstaltung.id());
+                catVeranstaltung.id(),
+                null);
 
         attendanceSeeder.seedAttendanceSessions(
                 rng,
@@ -799,7 +912,7 @@ public class DemoService {
                 List.of(
                         new AttendanceRepository.TemplateGroup(groupAnfaenger.id(), 0),
                         new AttendanceRepository.TemplateGroup(groupFortgeschritten.id(), 1)));
-        var theorieabend = eventRepository.create(
+        var theorieabend = eventService.create(
                 station.id(),
                 "Theorieabend",
                 "Theoretische Grundlagen und Fahrzeugkunde",
@@ -811,7 +924,8 @@ public class DemoService {
                 true,
                 null,
                 false,
-                catUebung.id());
+                catUebung.id(),
+                null);
         LocalDate todayDate = LocalDate.now();
         for (int i = 0; i < 5 && i < anfaengerMembers.size(); i++) {
             eventRepository.createRegistration(
@@ -830,7 +944,7 @@ public class DemoService {
         Instant deadline =
                 LocalDate.now().plusMonths(1).withDayOfMonth(10).atTime(23, 59).toInstant(ZoneOffset.UTC);
 
-        var tagDerOffenenTuer = eventRepository.create(
+        var tagDerOffenenTuer = eventService.create(
                 station.id(),
                 "Tag der offenen Tür",
                 "Öffentlichkeitsarbeit: Vorführungen und Mitmach-Aktionen",
@@ -842,14 +956,15 @@ public class DemoService {
                 true,
                 deadline,
                 true,
-                catVeranstaltung.id());
+                catVeranstaltung.id(),
+                null);
 
         Instant oeffentlichkeit = LocalDate.now().plusWeeks(3).atTime(14, 0).toInstant(ZoneOffset.UTC);
         Instant oeffentlichkeitEnd = LocalDate.now().plusWeeks(3).atTime(17, 0).toInstant(ZoneOffset.UTC);
         Instant oeffentlichkeitDeadline =
                 LocalDate.now().plusWeeks(2).atTime(23, 59).toInstant(ZoneOffset.UTC);
 
-        var stadtfest = eventRepository.create(
+        var stadtfest = eventService.create(
                 station.id(),
                 "Stadtfest Musterstadt",
                 "Stand der Jugendfeuerwehr beim Stadtfest",
@@ -861,7 +976,8 @@ public class DemoService {
                 true,
                 oeffentlichkeitDeadline,
                 false,
-                catVeranstaltung.id());
+                catVeranstaltung.id(),
+                null);
 
         Instant wettbewerb =
                 LocalDate.now().plusMonths(2).withDayOfMonth(20).atTime(8, 0).toInstant(ZoneOffset.UTC);
@@ -870,7 +986,7 @@ public class DemoService {
         Instant wettbewerbDeadline =
                 LocalDate.now().plusMonths(2).withDayOfMonth(1).atTime(23, 59).toInstant(ZoneOffset.UTC);
 
-        var kreisWettbewerb = eventRepository.create(
+        var kreisWettbewerb = eventService.create(
                 station.id(),
                 "Kreiswettbewerb",
                 "Jährlicher Kreiswettbewerb der Jugendfeuerwehren",
@@ -882,7 +998,8 @@ public class DemoService {
                 true,
                 wettbewerbDeadline,
                 true,
-                catWettbewerb.id());
+                catWettbewerb.id(),
+                null);
 
         // Add some registrations
         LocalDate tagDate = LocalDate.now().plusMonths(1).withDayOfMonth(15);
@@ -952,6 +1069,8 @@ public class DemoService {
 
         // -- Öffentlichkeitsarbeit events --
         var catOeffentlichkeit = eventRepository.createCategory(station.id(), "Öffentlichkeitsarbeit", 3);
+        eventRepository.updateCategory(
+                catOeffentlichkeit.id(), catOeffentlichkeit.name(), catOeffentlichkeit.position(), null, true);
         var allMembers = new ArrayList<StationMember>();
         allMembers.addAll(anfaengerMembers);
         allMembers.addAll(fortgeschrittenMembers);
@@ -977,7 +1096,7 @@ public class DemoService {
             LocalDate eventDate = LocalDate.now().minusWeeks(oeNames.length - e);
             Instant oeStart = eventDate.atTime(10, 0).toInstant(ZoneOffset.UTC);
             Instant oeEnd = eventDate.atTime(16, 0).toInstant(ZoneOffset.UTC);
-            var oeEvent = eventRepository.create(
+            var oeEvent = eventService.create(
                     station.id(),
                     oeNames[e],
                     "Öffentlichkeitsarbeit der Jugendfeuerwehr",
@@ -989,10 +1108,28 @@ public class DemoService {
                     true,
                     null,
                     true,
-                    catOeffentlichkeit.id());
-            eventFieldRepository.create(oeEvent.id(), "Ort", "string", "{}", oeOrte[e], 0, true, null);
+                    catOeffentlichkeit.id(),
+                    null);
             eventFieldRepository.create(
-                    oeEvent.id(), "Treffpunkt", "string", "{}", "Feuerwehrgerätehaus", 1, true, null);
+                    oeEvent.id(),
+                    "Ort",
+                    EventFieldType.STRING,
+                    EventFieldConfig.parse("{}"),
+                    oeOrte[e],
+                    0,
+                    true,
+                    null,
+                    true);
+            eventFieldRepository.create(
+                    oeEvent.id(),
+                    "Treffpunkt",
+                    EventFieldType.STRING,
+                    EventFieldConfig.parse("{}"),
+                    "Feuerwehrgerätehaus",
+                    1,
+                    true,
+                    null,
+                    true);
             // Create registrations with rotation: offset accepted members per event for variance
             int count = Math.min(oeMemberCounts[e], allMembers.size());
             int acceptOffset = e * 3; // shift which members get accepted each event
@@ -1011,7 +1148,7 @@ public class DemoService {
         Instant openStart = openDate.atTime(9, 0).toInstant(ZoneOffset.UTC);
         Instant openEnd = openDate.atTime(15, 0).toInstant(ZoneOffset.UTC);
         Instant openDeadline = LocalDate.now().plusDays(3).atTime(23, 59).toInstant(ZoneOffset.UTC);
-        var oeOpen = eventRepository.create(
+        var oeOpen = eventService.create(
                 station.id(),
                 "Blaulichtmeile Bürgerfest",
                 "Öffentlichkeitsarbeit — Anmeldung offen",
@@ -1023,12 +1160,38 @@ public class DemoService {
                 true,
                 openDeadline,
                 true,
-                catOeffentlichkeit.id());
-        eventFieldRepository.create(oeOpen.id(), "Ort", "string", "{}", "Rathausplatz Musterstadt", 0, true, null);
+                catOeffentlichkeit.id(),
+                null);
         eventFieldRepository.create(
-                oeOpen.id(), "Treffpunkt", "string", "{}", "Feuerwehrgerätehaus 08:30", 1, true, null);
+                oeOpen.id(),
+                "Ort",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Rathausplatz Musterstadt",
+                0,
+                true,
+                null,
+                true);
         eventFieldRepository.create(
-                oeOpen.id(), "Hinweis", "string", "{}", "Dienstkleidung und Ausrüstung mitbringen", 2, false, null);
+                oeOpen.id(),
+                "Treffpunkt",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Feuerwehrgerätehaus 08:30",
+                1,
+                true,
+                null,
+                true);
+        eventFieldRepository.create(
+                oeOpen.id(),
+                "Hinweis",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Dienstkleidung und Ausrüstung mitbringen",
+                2,
+                false,
+                null,
+                false);
         // 14 registrations: 6 accepted, 8 pending (not yet confirmed)
         int openCount = Math.min(14, allMembers.size());
         for (int i = 0; i < openCount; i++) {
@@ -1041,42 +1204,159 @@ public class DemoService {
         // -- Event Fields --
         // Per-event fields
         eventFieldRepository.create(
-                tagDerOffenenTuer.id(), "Ort", "string", "{}", "Feuerwehrhaus Musterstadt", 0, true, null);
+                tagDerOffenenTuer.id(),
+                "Ort",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Feuerwehrhaus Musterstadt",
+                0,
+                true,
+                null,
+                true);
         eventFieldRepository.create(
-                tagDerOffenenTuer.id(), "Treffpunkt", "string", "{}", "Haupteingang", 1, true, null);
+                tagDerOffenenTuer.id(),
+                "Treffpunkt",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Haupteingang",
+                1,
+                true,
+                null,
+                true);
         eventFieldRepository.create(
-                tagDerOffenenTuer.id(), "Hinweis", "string", "{}", "Dienstkleidung tragen", 2, false, null);
-        eventFieldRepository.create(stadtfest.id(), "Ort", "string", "{}", "Marktplatz Musterstadt", 0, true, null);
+                tagDerOffenenTuer.id(),
+                "Hinweis",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Dienstkleidung tragen",
+                2,
+                false,
+                null,
+                false);
         eventFieldRepository.create(
-                stadtfest.id(), "Treffpunkt", "string", "{}", "Stand der Jugendfeuerwehr", 1, true, null);
+                stadtfest.id(),
+                "Ort",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Marktplatz Musterstadt",
+                0,
+                true,
+                null,
+                true);
         eventFieldRepository.create(
-                kreisWettbewerb.id(), "Ort", "string", "{}", "Sportplatz Nachbarstadt", 0, true, null);
+                stadtfest.id(),
+                "Treffpunkt",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Stand der Jugendfeuerwehr",
+                1,
+                true,
+                null,
+                true);
+        eventFieldRepository.create(
+                kreisWettbewerb.id(),
+                "Ort",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Sportplatz Nachbarstadt",
+                0,
+                true,
+                null,
+                true);
         eventFieldRepository.create(
                 kreisWettbewerb.id(),
                 "Hinweis",
-                "string",
-                "{}",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
                 "Wettkampfkleidung und Ausrüstung mitbringen",
                 1,
                 false,
-                null);
+                null,
+                false);
         // Recurring event fields
         eventFieldRepository.create(
-                evAnfaenger.id(), "Ort", "string", "{}", "Feuerwehrhaus Musterstadt", 0, true, null);
+                evAnfaenger.id(),
+                "Ort",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Feuerwehrhaus Musterstadt",
+                0,
+                true,
+                null,
+                true);
         eventFieldRepository.create(
-                evAnfaenger.id(), "Hinweis", "string", "{}", "Sportkleidung mitbringen", 1, false, null);
-        eventFieldRepository.create(evFort.id(), "Ort", "string", "{}", "Feuerwehrhaus Musterstadt", 0, true, null);
+                evAnfaenger.id(),
+                "Hinweis",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Sportkleidung mitbringen",
+                1,
+                false,
+                null,
+                false);
         eventFieldRepository.create(
-                evFort.id(), "Hinweis", "string", "{}", "Schutzausrüstung wird gestellt", 1, false, null);
-        eventFieldRepository.create(evGesamt.id(), "Ort", "string", "{}", "Feuerwehrhaus Musterstadt", 0, true, null);
-        eventFieldRepository.create(evGesamt.id(), "Treffpunkt", "string", "{}", "Fahrzeughalle", 1, true, null);
+                evFort.id(),
+                "Ort",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Feuerwehrhaus Musterstadt",
+                0,
+                true,
+                null,
+                true);
         eventFieldRepository.create(
-                theorieabend.id(), "Ort", "string", "{}", "Schulungsraum Feuerwehrhaus", 0, true, null);
+                evFort.id(),
+                "Hinweis",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Schutzausrüstung wird gestellt",
+                1,
+                false,
+                null,
+                false);
         eventFieldRepository.create(
-                theorieabend.id(), "Hinweis", "string", "{}", "Schreibzeug mitbringen", 1, false, null);
+                evGesamt.id(),
+                "Ort",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Feuerwehrhaus Musterstadt",
+                0,
+                true,
+                null,
+                true);
+        eventFieldRepository.create(
+                evGesamt.id(),
+                "Treffpunkt",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Fahrzeughalle",
+                1,
+                true,
+                null,
+                true);
+        eventFieldRepository.create(
+                theorieabend.id(),
+                "Ort",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Schulungsraum Feuerwehrhaus",
+                0,
+                true,
+                null,
+                true);
+        eventFieldRepository.create(
+                theorieabend.id(),
+                "Hinweis",
+                EventFieldType.STRING,
+                EventFieldConfig.parse("{}"),
+                "Schreibzeug mitbringen",
+                1,
+                false,
+                null,
+                false);
 
         // -- News --
-        var news1 = newsRepository.create(
+        var news1 = newsService.create(
                 station.id(),
                 "Willkommen bei der Jugendfeuerwehr!",
                 """
@@ -1102,8 +1382,12 @@ public class DemoService {
                 Wir freuen uns auf eine tolle Zeit! 🚒
                 """,
                 "<p>Herzlich willkommen auf unserer neuen Plattform! Hier findet ihr alle wichtigen Informationen rund um unsere <strong>Jugendfeuerwehr</strong>.</p><h2>Was ist neu?</h2><p>Wir haben viele neue Funktionen für euch:</p><ul><li><strong>Terminübersicht</strong> — Alle Übungen, Veranstaltungen und Wettbewerbe auf einen Blick</li><li><strong>Anwesenheitsverwaltung</strong> — Schnelles Ein- und Auschecken bei Übungen</li><li><strong>Inventarverwaltung</strong> — Eure Ausrüstung immer im Blick</li><li><strong>Wissensdatenbank</strong> — Lernmaterial und Protokolle</li></ul><h2>Erste Schritte</h2><ol><li>Prüft euer <strong>Profil</strong> und ergänzt fehlende Daten</li><li>Schaut euch die <strong>kommenden Termine</strong> an</li><li>Meldet euch für den nächsten <strong>Wettbewerb</strong> an</ol><blockquote><p><strong>Tipp:</strong> Bei Fragen könnt ihr jederzeit die Betreuer ansprechen oder die Hilfe-Seite nutzen.</p></blockquote><p>Wir freuen uns auf eine tolle Zeit! 🚒</p>",
-                adminMember.id());
-        var news2 = newsRepository.create(
+                adminMember.id(),
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of());
+        var news2 = newsService.create(
                 station.id(),
                 "Kreiswettbewerb: Anmeldung geöffnet",
                 """
@@ -1129,23 +1413,57 @@ public class DemoService {
                 > *Teilnehmen dürfen alle Fortgeschrittenen.*
                 """,
                 "<p>Die Anmeldung zum <strong>Kreiswettbewerb</strong> am 20. des übernächsten Monats ist jetzt geöffnet!</p><h2>Wichtige Infos</h2><table><tr><td></td><td>Details</td></tr><tr><td><strong>Datum</strong></td><td>20. des übernächsten Monats</td></tr><tr><td><strong>Ort</strong></td><td>Sportplatz Nachbarstadt</td></tr><tr><td><strong>Treffpunkt</strong></td><td>Feuerwehrgerätehaus, 07:30 Uhr</td></tr></table><h3>Was wird bewertet?</h3><ul><li>Löschangriff</li><li>Staffellauf</li><li>Knotenkunde</li><li>Erste Hilfe</li></ul><p>Bitte meldet euch <strong>bis spätestens nächste Woche</strong> über die Terminseite an. Die Plätze sind begrenzt.</p><blockquote><p><em>Teilnehmen dürfen alle Fortgeschrittenen.</em></p></blockquote>",
-                betreuerMembers.getFirst().id());
+                betreuerMembers.getFirst().id(),
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of());
 
         // Comments on news
-        var comment1 = newsRepository.createComment(
-                news1.id(), null, elternMembers.get(0).id(), "Super, endlich eine moderne Plattform!");
-        newsRepository.createComment(
-                news1.id(), comment1.id(), betreuerMembers.getFirst().id(), "Danke! Bei Fragen einfach melden.");
-        newsRepository.createComment(
-                news1.id(), null, elternMembers.get(1).id(), "Kann man hier auch Abwesenheiten eintragen?");
-        newsRepository.createComment(
-                news2.id(), null, fortgeschrittenMembers.get(0).id(), "Ich bin dabei! \uD83D\uDCAA");
-        var comment2 = newsRepository.createComment(
-                news2.id(), null, fortgeschrittenMembers.get(1).id(), "Wie viele Plätze gibt es?");
-        newsRepository.createComment(
-                news2.id(), comment2.id(), betreuerMembers.get(0).id(), "Wir haben 8 Plätze. Bitte schnell anmelden!");
+        var comment1 = newsService.createComment(
+                station.id(),
+                news1.id(),
+                null,
+                elternMembers.get(0).id(),
+                "Demo User",
+                "Super, endlich eine moderne Plattform!");
+        newsService.createComment(
+                station.id(),
+                news1.id(),
+                comment1.id(),
+                betreuerMembers.getFirst().id(),
+                "Demo User",
+                "Danke! Bei Fragen einfach melden.");
+        newsService.createComment(
+                station.id(),
+                news1.id(),
+                null,
+                elternMembers.get(1).id(),
+                "Demo User",
+                "Kann man hier auch Abwesenheiten eintragen?");
+        newsService.createComment(
+                station.id(),
+                news2.id(),
+                null,
+                fortgeschrittenMembers.get(0).id(),
+                "Demo User",
+                "Ich bin dabei! \uD83D\uDCAA");
+        var comment2 = newsService.createComment(
+                station.id(),
+                news2.id(),
+                null,
+                fortgeschrittenMembers.get(1).id(),
+                "Demo User",
+                "Wie viele Plätze gibt es?");
+        newsService.createComment(
+                station.id(),
+                news2.id(),
+                comment2.id(),
+                betreuerMembers.get(0).id(),
+                "Demo User",
+                "Wir haben 8 Plätze. Bitte schnell anmelden!");
 
-        var news3 = newsRepository.create(
+        var news3 = newsService.create(
                 station.id(),
                 "Neue Ausrüstung eingetroffen",
                 """
@@ -1162,9 +1480,13 @@ public class DemoService {
                 > Die neuen Helme entsprechen der aktuellen **DIN EN 443** Norm und bieten verbesserten Schutz.
                 """,
                 "<p>Die bestellten <strong>Helme und Handschuhe</strong> sind eingetroffen! 🎉</p><h2>Verteilung</h2><p>Die Verteilung findet bei der <strong>nächsten Übung</strong> statt. Bitte beachtet:</p><ol><li>Prüft eure <strong>Größen im Inventar</strong> vorab</li><li>Meldet euch bei Unstimmigkeiten bei den Betreuern</li><li>Bringt eure <strong>alten Helme</strong> zur Rückgabe mit</li></ol><blockquote><p>Die neuen Helme entsprechen der aktuellen <strong>DIN EN 443</strong> Norm und bieten verbesserten Schutz.</p></blockquote>",
-                betreuerMembers.get(1).id());
+                betreuerMembers.get(1).id(),
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of());
 
-        newsRepository.create(
+        newsService.create(
                 station.id(),
                 "Sommerferien: Übungspause",
                 """
@@ -1183,12 +1505,26 @@ public class DemoService {
                 Wir wünschen allen **schöne und erholsame Ferien**! ☀️
                 """,
                 "<p>Während der <strong>Sommerferien</strong> finden keine regulären Übungen statt.</p><h2>Zeitraum</h2><p>Der Übungsbetrieb <strong>pausiert</strong> während der gesamten Schulferien. Wir starten wieder am <strong>ersten Montag nach den Ferien</strong>.</p><h3>Trotzdem aktiv bleiben?</h3><ul><li>Das <strong>Wissenscenter</strong> bleibt verfügbar — nutzt die Zeit zum Lernen</li><li>Prüft eure <strong>Ausrüstung</strong> und meldet Mängel vorab</li><li>Die <strong>Anmeldung</strong> für den Herbst-Wettbewerb öffnet in den Ferien</li></ul><p>Wir wünschen allen <strong>schöne und erholsame Ferien</strong>! ☀️</p>",
-                adminMember.id());
+                adminMember.id(),
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of());
 
-        newsRepository.createComment(
-                news3.id(), null, elternMembers.get(2).id(), "Werden die alten Helme eingesammelt?");
-        newsRepository.createComment(
-                news3.id(), null, betreuerMembers.get(1).id(), "Ja, bitte zur nächsten Übung mitbringen.");
+        newsService.createComment(
+                station.id(),
+                news3.id(),
+                null,
+                elternMembers.get(2).id(),
+                "Demo User",
+                "Werden die alten Helme eingesammelt?");
+        newsService.createComment(
+                station.id(),
+                news3.id(),
+                null,
+                betreuerMembers.get(1).id(),
+                "Demo User",
+                "Ja, bitte zur nächsten Übung mitbringen.");
 
         // -- User Tags --
         var tagWettkampf = userTagRepository.create(station.id(), "Wettkampfgruppe");
@@ -1236,8 +1572,16 @@ public class DemoService {
                     newSizeId = sizes.get(rng.nextInt(sizes.size())).id();
                 }
             }
-            var exchange = exchangeRepository.create(
-                    station.id(), kid.id(), item.id(), item.inventoryId(), item.sizeId(), newSizeId, reason, null);
+            var exchange = exchangeService.create(
+                    station.id(),
+                    kid.id(),
+                    "Demo User",
+                    item.id(),
+                    item.inventoryId(),
+                    item.sizeId(),
+                    newSizeId,
+                    reason,
+                    null);
             // Progress some exchanges
             var targetStatus = exchangeStatuses.get(rng.nextInt(exchangeStatuses.size()));
             if (targetStatus != ExchangeStatus.ANNOUNCED) {
@@ -1262,7 +1606,7 @@ public class DemoService {
                     .findFirst();
             if (handschuheInv.isPresent()) {
                 var sizes = inventoryRepository.findSizes(handschuheInv.get().id());
-                procurementRepository.create(
+                procurementService.create(
                         station.id(),
                         handschuheInv.get().id(),
                         anfaengerMembers.get(2).id(),
@@ -1282,7 +1626,7 @@ public class DemoService {
                 boolean hasSporttasche = items.stream()
                         .anyMatch(i -> i.inventoryId() == sporttascheInv.get().id());
                 if (!hasSporttasche) {
-                    procurementRepository.create(
+                    procurementService.create(
                             station.id(), sporttascheInv.get().id(), kid.id(), null, "Sporttasche fehlt");
                 }
             }
@@ -1325,7 +1669,8 @@ public class DemoService {
                 anfaengerMembers,
                 fortgeschrittenMembers,
                 tagDerOffenenTuer.id(),
-                stadtfest.id());
+                stadtfest.id(),
+                news1.id());
         log.info("Demo: Created Notifications");
 
         // -- Waiting List --
@@ -1363,8 +1708,52 @@ public class DemoService {
         log.info("Demo: Created lending data");
 
         // -- Public Knowledge Base --
-        stationRepository.updatePublicKbMode(station.id(), "ALLOW_ALL");
+        stationRepository.updatePublicKbMode(station.id(), PublicKbMode.ALLOW_ALL);
         log.info("Demo: Enabled public knowledge base");
+
+        // -- Event Templates --
+        var tplStandard = eventTemplateService.create(station.id(), "Standard-Übung");
+        eventTemplateService.update(
+                tplStandard.id(),
+                "Standard-Übung",
+                "Übungsabend",
+                null,
+                null,
+                "RECURRING",
+                false,
+                null,
+                false,
+                null,
+                null,
+                null);
+        eventTemplateService.replaceFields(
+                tplStandard.id(),
+                List.of(
+                        new EventTemplateFieldData(
+                                "Ort", EventFieldType.STRING, EventFieldConfig.parse("{}"), 0, true, true, null),
+                        new EventTemplateFieldData(
+                                "Treffpunkt",
+                                EventFieldType.STRING,
+                                EventFieldConfig.parse("{}"),
+                                1,
+                                true,
+                                true,
+                                null)));
+        var tplWettbewerb = eventTemplateService.create(station.id(), "Wettbewerb");
+        eventTemplateService.update(
+                tplWettbewerb.id(), "Wettbewerb", null, null, null, "ONE_TIME", true, null, true, null, null, null);
+        eventTemplateService.replaceFields(
+                tplWettbewerb.id(),
+                List.of(
+                        new EventTemplateFieldData(
+                                "Ort", EventFieldType.STRING, EventFieldConfig.parse("{}"), 0, true, true, null),
+                        new EventTemplateFieldData(
+                                "Thema", EventFieldType.STRING, EventFieldConfig.parse("{}"), 1, true, false, null)));
+        log.info("Demo: Created event templates");
+
+        // -- Feed Tokens --
+        feedTokenService.getOrCreate(adminMember.id());
+        log.info("Demo: Created feed token for admin");
 
         // -- Settings --
         applicationSettingRepository.setBoolean("station_registration_enabled", false);
